Tomar una muestra más representativa: Alcaldía Cuauhtémoc

--- a/Main/Pipeline.ipynb
+++ b/Main/Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,13 @@
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.preprocessing import normalize\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.ensemble import VotingRegressor\n",
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -65,7 +71,7 @@
     "def get_clima():\n",
     "    os.chdir(\"../Data\")\n",
     "    frequency = 1\n",
-    "    start_date = '01-DEC-2014'\n",
+    "    start_date = '01-JAN-2014'\n",
     "    end_date = '30-AUG-2019'\n",
     "    api_key = '28f7f02aa28d4afe9dc215223190509'\n",
     "    location_list = ['mexico_city']\n",
@@ -83,10 +89,25 @@
    "outputs": [],
    "source": [
     "def get_colonia_delito():\n",
-    "    roma_n = data[(data.alcaldia_hechos == 'CUAUHTEMOC') & (data.colonia_hechos == 'ROMA NORTE') & (data.categoria_delito == 'ROBO A TRANSEUNTE EN VÍA PÚBLICA CON Y SIN VIOLENCIA')]\n",
+    "    roma_n = data[(data.alcaldia_hechos == 'CUAUHTEMOC') & (data.colonia_hechos == 'ROMA NORTE')]\n",
+    "    roma_n = roma_n[(roma_n.categoria_delito == 'ROBO A TRANSEUNTE EN VÍA PÚBLICA CON Y SIN VIOLENCIA') |\n",
+    "              (roma_n.delito == 'ROBO A TRANSEUNTE DE CELULAR SIN VIOLENCIA') | \n",
+    "              (roma_n.delito == 'ROBO A TRANSEUNTE DE CELULAR CON VIOLENCIA') |\n",
+    "              (roma_n.delito == 'ROBO A TRANSEUNTE SALIENDO DEL BANCO CON VIOLENCIA')]\n",
     "    roma_n.sort_values(by='fecha_hechos', ascending=True, inplace=True)\n",
     "    roma_n = pd.merge_asof(roma_n, clima, on='fecha_hechos')\n",
     "    roma_n['nombre_dia'] = roma_n.fecha_hechos.dt.weekday\n",
+    "    festivos = ['01-01', '01-05', '01-06', '02-05', '02-04', '03-21', '05-01', '05-05', '09-15', '09-16', '10-31', '11-01', '11-02', '11-20', '12-12', '12-24', '12-25', '12-31']\n",
+    "    años = ['2015', '2016', '2017', '2018', '2019']\n",
+    "    festivo = [i+'-'+x for i in años for x in festivos]\n",
+    "    festivo = pd.DataFrame(festivo, columns=['dia'])\n",
+    "    festivo['dia_festivo'] = 1\n",
+    "    festivo['dia'] = pd.to_datetime(festivo.dia).dt.date\n",
+    "    roma_n['dia'] = roma_n.fecha_hechos.dt.date\n",
+    "    roma_n = pd.merge(roma_n, festivo, how='left', on='dia')\n",
+    "    roma_n.dia_festivo.fillna(0, inplace=True)\n",
+    "    roma_n['dia_festivo'] = roma_n.dia_festivo.astype('int', inplace=True)\n",
+    "    roma_n.drop(columns='dia', inplace=True)\n",
     "    return roma_n"
    ]
   },
