--- a/Main/Pipeline.ipynb
+++ b/Main/Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,9 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.preprocessing import normalize\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import ExtraTreesRegressor\n",
-    "from sklearn.ensemble import VotingRegressor\n",
-    "from sklearn.ensemble import AdaBoostRegressor\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.model_selection import GridSearchCV"
@@ -38,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +114,7 @@
    "source": [
     "def mapear():\n",
     "    os.chdir(\"../Images\")\n",
-    "    mapa=folium.Map(location=[19.41641111, -99.16169722], zoom_start=15)\n",
+    "    mapa=folium.Map(location=[19.443056, -99.144444], zoom_start=15)\n",
     "    for index, row in roma_n.iterrows():\n",
     "        folium.CircleMarker([row['latitud'], row['longitud']], radius=1, fill_color=\"#3db7e4\").add_to(mapa)\n",
     "    geo = roma_n[['latitud', 'longitud']].as_matrix()\n",
@@ -135,7 +130,7 @@
    "source": [
     "def preparar_prediccion():\n",
     "    prueba = roma_n.copy()\n",
-    "    prueba.drop(columns=['fiscalia', 'agencia', 'unidad_investigacion', 'alcaldia_hechos', 'colonia_hechos'], inplace=True)\n",
+    "    prueba.drop(columns=['fiscalia', 'agencia', 'unidad_investigacion', 'alcaldia_hechos', 'punto_rocio', 'colonia_hechos', 'calle_hechos', 'temp_sentir', 'categoria_delito'], inplace=True)\n",
     "    X = prueba.drop(columns=['fecha_hechos', 'latitud', 'longitud'])\n",
     "    y = prueba[['fecha_hechos', 'latitud', 'longitud']]\n",
     "    label = LabelEncoder()\n",
@@ -160,15 +155,15 @@
    "outputs": [],
    "source": [
     "def prediccion():\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "    model = RandomForestRegressor(n_estimators=500)\n",
-    "    model.fit(X, y)\n",
-    "    pre = model.predict(X)\n",
+    "    etr = ExtraTreesRegressor(n_estimators=750, max_depth=400, random_state=1)\n",
+    "    etr.fit(X, y)\n",
+    "    pre = etr.predict(X)\n",
     "    prediction = pd.DataFrame(pre, columns=['latitud', 'longitud', 'day', 'month', 'hour', 'minute'])\n",
     "    prediction[['day', 'month', 'hour', 'minute']] = prediction[['day', 'month', 'hour', 'minute']].round().astype('int')\n",
     "    prediction['year'] = '2020'\n",
     "    prediction['fecha_hechos'] = pd.to_datetime(prediction[['year', 'day', 'month', 'hour', 'minute']], errors='coerce')\n",
     "    prediction.drop(columns=['year', 'day', 'month', 'hour', 'minute'], inplace=True)\n",
+    "    prediction.sort_values(by='fecha_hechos', inplace=True)\n",
     "    return prediction"
    ]
   },
@@ -180,12 +175,13 @@
    "source": [
     "def mapear_prediccion():\n",
     "    os.chdir(\"../Images\")\n",
-    "    mapa_prediccion=folium.Map(location=[19.41641111, -99.16169722], zoom_start=15)\n",
-    "    for index, row in prediction.iterrows():\n",
-    "        folium.CircleMarker([row['latitud'], row['longitud']], radius=1, fill_color=\"#3db7e4\").add_to(mapa_prediccion)\n",
-    "    geo = prediction[['latitud', 'longitud']].as_matrix()\n",
-    "    mapa_prediccion.add_children(plugins.HeatMap(geo, radius=15))\n",
-    "    mapa_prediccion.save('prediccion.html')"
+    "    prediction['weight'] = [i for i in range(len(prediction))]\n",
+    "    mapa_final = folium.Map(location=[19.443056, -99.144444], zoom_start=15)\n",
+    "    geo = [[[row['latitud'], row['longitud']] for index, row in prediction[prediction['weight'] == i].iterrows()] for i in range(len(prediction))]\n",
+    "    index = ['{:%Y-%m-%d %H-%M-%S}'.format(i) for i in prediction.fecha_hechos]\n",
+    "    hm = plugins.HeatMapWithTime(geo, index=index, radius=20, auto_play=True, max_opacity=0.8, name='Robo a transeunte')\n",
+    "    hm.add_to(mapa_final)\n",
+    "    mapa_final.save('mapa_final.html')"
    ]
   }
  ],
